courses/430_programming-languages/assignment-6/tests/error/hw4_error17b.correct
operator '+' requires int * int or string * string, found string * int
